<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.work.afis.crudretrofit.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etNPM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/npm"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/name"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etKelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:hint="@string/classes"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/session"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        />

    <RadioGroup
        android:id="@+id/radioButtonSesi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioPagi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/radioSiang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/afternoon"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btnDaftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        />

</LinearLayout>
